--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
       href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css"
       rel="stylesheet"
     />
-    <script src="libraries/p5.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.1/p5.js"></script>
     <script src="sketch.js"></script>
     <script src="graph.js"></script>
     <script src="node.js"></script>
     <script src="problem.js"></script>
     <script src="search_visualize.js"></script>
-    <script src="search.js"></script>
     <script src="utils.js"></script>
   </head>
   <body>
@@ -36,9 +35,19 @@
             <li class="option">
               <span class="option-text">Depth-First Search</span>
             </li>
+            <li class="option">
+              <span class="option-text">Uniform Cost Search</span>
+            </li>
+            <li class="option">
+              <span class="option-text">Greedy Best-First Search</span>
+            </li>
+            <li class="option">
+              <span class="option-text">A-Star Search</span>
+            </li>
           </ul>
         </div>
         <button class="visualize" onclick="getText()">Visualize</button>
+        <button class="clearpath" onclick="clearPath()">Clear Field</button>
       </div>
       <div class="main-content">
         <main></main>
